# rust_youtube_downloader

./: Cargo.toml
deployment/: Dockerfile
src/: main.rs
src/downloader/: mod.rs
src/websocket/: client_messages.rs  mod.rs  server_messages.rs  session.rs  socket_server.rs
static/: flutter_service_worker.js  index.html  main.dart.js  version.json
static/assets/: NOTICES
static/assets/shaders/: ink_sparkle.frag
