[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustube = {version = "0.5.0", features = ["callback"]}
tokio = { version = "1.21.2", features = ["full"] }
actix = "0.13"
actix-web = "*"
actix-cors = "0.6.2"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
actix-files = "0.6"
actix-web-actors = "4.1"
log = "0.4"
rand = "0.8"
serde_with = "2.0.1"
#openssl = { version = "0.10", features = ["vendored"] }
